@@ -252,7 +252,7 @@ rrset_sign(signconf_type* signconf, names_view_type view, recordset_type record,
             expiration = ldns_rdf2native_int32(ldns_rr_rrsig_expiration(matchedsignatures[i].signature->rr));
             inception = ldns_rdf2native_int32(ldns_rr_rrsig_inception(matchedsignatures[i].signature->rr));
         }
-        if (matchedsignatures[i].key && matchedsignatures[i].key->ksk && rrtype != LDNS_RR_TYPE_DNSKEY) {
+        if (matchedsignatures[i].key && matchedsignatures[i].key->ksk && !matchedsignatures[i].key->zsk && rrtype != LDNS_RR_TYPE_DNSKEY) {
             /* If KSK don't sign other RRsets */
             matchedsignatures[i].key = NULL;
             matchedsignatures[i].signature = NULL;
@@ -261,7 +261,7 @@ rrset_sign(signconf_type* signconf, names_view_type view, recordset_type record,
         } else if (matchedsignatures[i].key && !matchedsignatures[i].key->ksk && !matchedsignatures[i].key->zsk && rrtype != LDNS_RR_TYPE_DNSKEY && !matchedsignatures[i].key->publish) {
             matchedsignatures[i].key = NULL;
             matchedsignatures[i].signature = NULL;
-        } else if (matchedsignatures[i].key && !matchedsignatures[i].key->ksk && rrtype == LDNS_RR_TYPE_DNSKEY) {
+        } else if (matchedsignatures[i].key && !matchedsignatures[i].key->ksk && matchedsignatures[i].key->zsk && rrtype == LDNS_RR_TYPE_DNSKEY) {
             /* If not KSK don't sign DNSKEY RRset */
             matchedsignatures[i].key = NULL;
             matchedsignatures[i].signature = NULL;
